--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
           node-version: '20'
 
       - name: Install dependencies
-        run: cd react-app && npm ci
+        run: cd react-app && npm install
 
       - name: Build
         run: cd react-app && npm run build
